--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,13 +2,9 @@
   "manifest_version": 2,
   "name": "__MSG_extName__",
   "homepage_url": "http://localhost:8080/",
-  "description": "A Vue Browser Extension",
+  "description": "A Vue Browser Extension for contextual context cards ",
   "default_locale": "en",
-  "permissions": [
-    "activeTab",
-    "<all_urls>",
-    "*://*/*"
-  ],
+  "permissions": ["activeTab", "<all_urls>", "*://*/*"],
   "icons": {
     "16": "icons/16.png",
     "48": "icons/48.png",
